Replace Jettison with FasterXML Jackson for REST JSON handling - Updated CXF JAX-RS provider beans to use Jackson 2 - Ensured backward compatibility of REST API request/response payloads - Excluded cxf-rt-rs-extension-providers to prevent Jettison being reintroduced